@@ -8,6 +8,14 @@ not yet  BJH  Release 10.94.00
 
               pamtowinicon: Add BMP/PNG encoding to verbose output.
 
+              libnetpbm: pm_system: Fix bug: standard input feeder process
+              repositions unrelated files.  Always broken (pm_system was new
+              in Netpbm 10.13 (September 2003).
+
+              Pamtowinicon: Fix crash or incorrect output with PNG encoding
+              (result of pm_system bug above).  Always broken (Pamtowinicon
+              was new in Netpbm 10.63 (June 2013).
+
 20.12.28 BJH  Release 10.93.00
 
               pamarith: Add -equal.
